
	* src/core/na-selected-info.c
	(dump): New function.
	(na_selected_info_create_for_uri): Accepts a mimetype.

	* src/plugin-tracker/na-tracker-dbus.c
	(na_tracker_dbus_get_selected_paths): Also sends the mimetype.

	* src/utils/nautilus-actions-run.c (targets_from_selection):
	Get the mimetype from DBus interface.

2010-04-12 Pierre Wieser <pwieser@trychlos.org>

	"Advanced conditions" tab is renamed as "Schemes".

	* src/nact/nact-iadvanced-tab.c: Renamed as src/nact/nact-ischemes-tab.c.
	* src/nact/nact-iadvanced-tab.h: Renamed as src/nact/nact-ischemes-tab.h.

	* src/nact/Makefile.am:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-main-tab.h:
	* src/nact/nact-main-window.c: Updated accordingly.

	Move item properties to their own tab.

	* src/nact/nact-iproperties-tab.c:
	* src/nact/nact-iproperties-tab.h: New files.

	* src/nact/Makefile.am:
	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-main-tab.h:
	* src/nact/nact-main-window.c:
	* src/nact/nautilus-actions-config-tool.ui: Updated accordingly.

2010-04-09 Pierre Wieser <pwieser@trychlos.org>

	* NEWS: Updated.

	* src/nact/nact-sort-buttons.c (set_new_sort_order):
	Do not rewrite in GConf a just-readen sort order.

	* src/io-gconf/nagp-writer.c (nagp_iio_provider_delete_item):
	Also delete the schema names which may be embedded in GConfEntry.

	* src/api/na-gconf-utils.h:
	* src/core/na-gconf-utils.c (na_gconf_utils_dump_entries):
	New function.

	* src/io-gconf/nagp-reader.c (read_item):
	Dump content of readen entries.

	* src/io-gconf/nagp-gconf-provider.c (install_monitors):
	Also monitors schemas to be triggered when importing a schema.

	* configure.ac: Bump version number for release.

	* src/nact/nact-iaction-tab.c (on_icon_browse):
	Save current position and folder of icon chooser.

2010-04-08 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-object-profile.c (is_valid_path_parameters):
	Only check for non-empty path+parameters (fix #614596).
